A few more updates in Nullability, code-fix in CredentialProvider